cmd/appuser-gateway/k8s/04-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: appuser-gateway-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: appuser-gateway-traefik-app
    k8s.kuboard.cn/workload: appuser-gateway-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-appuser-gateway-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/appuser/v1/signup
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/app
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/login
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.japan-procyon-production.npool.top
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: appuser-gateway-traefik-app-free-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: appuser-gateway-traefik-app-free-user
    k8s.kuboard.cn/workload: appuser-gateway-traefik-app-free-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-appuser-gateway-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/appuser/v1/loginverify
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/reset/user
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.japan-procyon-production.npool.top
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: appuser-gateway-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: appuser-gateway-traefik-app-user
    k8s.kuboard.cn/workload: appuser-gateway-traefik-app-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-appuser-gateway-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/appuser/v1/create/app
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/update/app
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/app/users
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/app/roles
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/app/roleusers
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/app/kycs
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/app/user/kycimage
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/app/auths
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/app/authhistories
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/apps
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/user/apps
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/signmethods
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/recaptchas
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/create/app/auth
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/delete/app/auth
            backend:
              serviceName: appuser-gateway
              servicePort: 50500

          - path: /api/appuser/v1/setup/googleauth
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/verify/googleauth
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/create/kyc
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/update/kyc
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/kyc
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/upload/kycimage
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/kycimage
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/create/role
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/roles
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/update/role
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/create/app/role
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/create/roleuser
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/roleusers
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/delete/roleuser
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/create/app/roleuser
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/create/user
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/update/user
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/users
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/loginhistories
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/logout
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/logined
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
          - path: /api/appuser/v1/get/user/kycimage
            backend:
              serviceName: appuser-gateway
              servicePort: 50500
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.japan-procyon-production.npool.top
      http: *http_rules
